--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,37 +2,126 @@
 @import 'global';
 @import 'fonts';
 
-.header{
-    &__logo-link{
-        margin-left: 50px;
-        margin-top: 50px;
-        display: block;
-        span{
-            font-size: 36px;
-            line-height: 22px;
-            letter-spacing: 2.4px;
-            position: relative;
-            color: $black;
-            font-weight: 300;
-            font-family: 'Raleway Dots', cursive;
-            // position: fixed;
-            // z-index: 800;
+@media (min-width: 320px){
+    .header{
+        padding: 25px 20px;
+        &__logo-link{
             display: block;
-            &:after {
-                content: '';
-                border-radius: 100%;
-                height: 3px;
-                width: 3px;
-                position: absolute;
-                background: #f4df4f;
-                top: 88%;
-                left: initial;
-                bottom: 0;
-                display: inline-block;
+            span{
+                font-size: 36px;
+                line-height: 22px;
+                letter-spacing: 2.4px;
+                position: relative;
+                color: $black;
+                font-weight: 500;
+                font-family: 'Raleway Dots', cursive;
+                // position: fixed;
+                // z-index: 800;
+                display: block;
+                &:after {
+                    content: '';
+                    border-radius: 100%;
+                    height: 3px;
+                    width: 3px;
+                    position: absolute;
+                    background: #f4df4f;
+                    top: 88%;
+                    left: initial;
+                    bottom: 0;
+                    display: inline-block;
+                }
             }
         }
     }
+//NAV MENU start
+    .navigation-list{
+        display: none;
+    }
+    .menu__btn{
+        width: 28px;
+        height: 16px;
+        padding: 0;
+        background-color: transparent;
+        margin-bottom: 0px;
+        cursor: pointer;
+        &::after{
+            content: '';
+            height: 1px;
+            width: 28px;
+            background-color: $black;
+            display: block;
+        }
+        &::before{
+            content: '';
+            height: 1px;
+            width: 28px;
+            background-color: $black;
+            display: block;
+            margin-bottom: 4px;
+        }
+    }
+    .menu__btn-line{
+        background-color: $black;
+        display: block;
+        height: 1px;
+        width: 28px;
+        margin-bottom: 4px;
+    }
+    .menu__btn.menu__btn--active{
+        .menu__btn-line{
+            opacity: 0;
+        }
+        transition: all 0.5s ease-in-out;
+        &::before{
+            transform: translateY(4px) rotate(45deg);
+            width: 28px;
+            transition: all 0.3s ease-in-out;
+        }
+        &::after{
+            transform: translateY(-6px) rotate(-45deg);
+            width: 28px;
+            transition: all 0.3s ease-in-out;
+        }
+    }
+//NAV MENU end
 }
+
+@media (min-width: 769px){
+.header{
+    padding: 50px 0 0 50px;
+ }
+ .navigation-list{
+    display:block!important;
+}
+.menu__btn{
+    display:none;
+}
+//         span{
+//             font-size: 36px;
+//             line-height: 22px;
+//             letter-spacing: 2.4px;
+//             position: relative;
+//             color: $black;
+//             font-weight: 300;
+//             font-family: 'Raleway Dots', cursive;
+//             // position: fixed;
+//             // z-index: 800;
+//             display: block;
+//             &:after {
+//                 content: '';
+//                 border-radius: 100%;
+//                 height: 3px;
+//                 width: 3px;
+//                 position: absolute;
+//                 background: #f4df4f;
+//                 top: 88%;
+//                 left: initial;
+//                 bottom: 0;
+//                 display: inline-block;
+//             }
+//         }
+//     }
+// }
 .introduce{
     margin: 30px 0 220px 100px;
     &__block{
@@ -107,7 +196,7 @@
         a {
             font-family: 'Raleway', sans-serif;
             font-weight: 500;
-            font-size: 88px;
+            font-size: 80px;
             text-decoration: none;
             //   color: rgba(255, 255, 255, 0.3);
             color: #333;
@@ -152,7 +241,7 @@
     }
 }
 .promo{
-    height: 50vh;
+    // height: 50vh;
     // overflow: hidden;
     cursor: default;
     &__next{
@@ -199,13 +288,13 @@
         }
     }
 }
-.ambition{
+.philosophy{
     margin-left: 120px;
     // position: absolute;
     // bottom: 25px;
     // left: 0;
     display: block;
-    font-size: 15px;
+    font-size: 12px;
     p{
         letter-spacing: 2.4px;
         text-transform: uppercase;
@@ -263,5 +352,6 @@
     }
 }
 
+}
 
-@import 'media';
+// @import 'media';
